--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">JStyle</string>
     <string name="lista_vacia">Sin Datos</string>
+    <string name="title_activity_maps">Mapa</string>
 </resources>
